--- a/apps/monitoring/prometheus/app.yaml
+++ b/apps/monitoring/prometheus/app.yaml
@@ -6,12 +6,12 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/momerheb0/gitops-cluster.git
-    targetRevision: HEAD
-    path: apps/monitoring/prometheus
+    repoURL: https://prometheus-community.github.io/helm-charts
+    chart: kube-prometheus-stack
+    targetRevision: 58.0.2  # Replace with latest version if needed
     helm:
       valueFiles:
-        - values.yaml
+        - https://raw.githubusercontent.com/momerheb0/gitops-cluster/HEAD/apps/monitoring/prometheus/values.yaml
   destination:
     server: https://kubernetes.default.svc
     namespace: monitoring
