--- a/apps/logging/promtail/helm-release.yaml
+++ b/apps/logging/promtail/helm-release.yaml
@@ -16,7 +16,7 @@ spec:
       values: |
         config:
           clients:
-            - url: http://loki.logging.svc.cluster.local/loki/api/v1/push
+                  - url: http://loki.logging.svc.cluster.local:3100/loki/api/v1/push
   syncPolicy:
     automated:
       selfHeal: true
